.build.log
 
In file included from src/../include/DAL.h:12:0,
                 from src/main.cpp:2:
src/../include/Object.h: In member function ‘Type& gesterom::Object<Type>::get()’:
src/../include/Object.h:31:30: error: expected type-specifier before ‘NullReferenceExeption’
   if(not loaded) { throw new NullReferenceExeption();}
                              ^~~~~~~~~~~~~~~~~~~~~
In file included from src/../include/DAL.h:19:0,
                 from src/main.cpp:2:
src/../include/SpecLoader.h: At global scope:
src/../include/SpecLoader.h:2:7: error: redefinition of ‘class gesterom::Loader<int>’
 class Loader <int> {
       ^~~~~~~~~~~~
In file included from src/../include/Loader.h:16:0,
                 from src/../include/DAL.h:14,
                 from src/main.cpp:2:
src/../include/SpecLoader.h:2:7: note: previous definition of ‘class gesterom::Loader<int>’
 class Loader <int> {
       ^~~~~~~~~~~~
In file included from src/../include/DAL.h:19:0,
                 from src/main.cpp:2:
src/../include/SpecLoader.h:25:7: error: redefinition of ‘class gesterom::Loader<char>’
 class Loader <char> {
       ^~~~~~~~~~~~~
In file included from src/../include/Loader.h:16:0,
                 from src/../include/DAL.h:14,
                 from src/main.cpp:2:
src/../include/SpecLoader.h:25:7: note: previous definition of ‘class gesterom::Loader<char>’
 class Loader <char> {
       ^~~~~~~~~~~~~
src/main.cpp: In function ‘int main(int, char**)’:
src/main.cpp:6:2: error: ‘Loader’ was not declared in this scope
  Loader<int> * l = new Loader<int>();
  ^~~~~~
src/main.cpp:6:2: note: suggested alternative:
In file included from src/../include/DAL.h:14:0,
                 from src/main.cpp:2:
src/../include/Loader.h:4:14: note:   ‘gesterom::Loader’
 class Loader final{
              ^~~~~
src/main.cpp:6:9: error: expected primary-expression before ‘int’
  Loader<int> * l = new Loader<int>();
         ^~~
src/main.cpp:8:2: error: ‘Reference’ was not declared in this scope
  Reference<int> ref(l);
  ^~~~~~~~~
src/main.cpp:8:2: note: suggested alternative:
In file included from src/../include/DAL.h:17:0,
                 from src/main.cpp:2:
src/../include/Reference.h:4:17: note:   ‘gesterom::Reference’
 class Reference final{
                 ^~~~~
src/main.cpp:8:12: error: expected primary-expression before ‘int’
  Reference<int> ref(l);
            ^~~
src/main.cpp:10:12: error: ‘ref’ was not declared in this scope
  std::cin>>ref;
            ^~~
src/main.cpp:10:12: note: suggested alternative:
In file included from /usr/include/c++/7/bits/std_function.h:44:0,
                 from /usr/include/c++/7/functional:58,
                 from src/../include/DAL.h:6,
                 from src/main.cpp:2:
/usr/include/c++/7/bits/refwrap.h:367:5: note:   ‘std::ref’
     ref(reference_wrapper<_Tp> __t) noexcept
     ^~~
src/main.cpp:4:14: warning: unused parameter ‘argv’ [-Wunused-parameter]
 int main(int argv, char** args){
              ^~~~
src/main.cpp:4:27: warning: unused parameter ‘args’ [-Wunused-parameter]
 int main(int argv, char** args){
                           ^~~~
